--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -25,7 +25,7 @@
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
-// Using existing Firestore instance from module imports instead
+    // Using existing Firestore instance from module imports instead
 
     // Firestore collection references
     const { collection, query, where, getDocs, addDoc, deleteDoc, doc, serverTimestamp, limit } = firebase.firestore;
@@ -845,8 +845,10 @@
     }
 
     // Funções de autenticação
-    function checkUserLogin() {
-      const isLoggedIn = sessionStorage.getItem('loggedIn');
+    async function checkUserLogin() {
+      // Verificar se o usuário está logado no Firebase
+      const isLoggedIn = sessionStorage.getItem('loggedIn') === 'true';
+
       if (!isLoggedIn) {
         window.location.replace('index.html');
         return false;
@@ -899,36 +901,26 @@
         // Ordenar mercados alfabeticamente
         mercados.sort((a, b) => a.nome.localeCompare(b.nome));
 
-        // Atualizar select de mercados
-        const selectMercado = document.getElementById("mercado");
-        selectMercado.innerHTML = "";
-        mercados.forEach((mercado) => {
-          const option = document.createElement("option");
-          option.value = mercado.nome;
-          option.textContent = mercado.nome;
-          selectMercado.appendChild(option);
-        });
-
-        // Atualizar lista de mercados
-        const mercadosLista = document.getElementById("mercados-lista");
-        mercadosLista.innerHTML = mercados.length === 0
-          ? '<div class="history-empty">Nenhum mercado cadastrado</div>'
-          : mercados.map(mercado => `
+        // Atualizar a interface com os mercados
+        document.getElementById("mercados-lista").innerHTML = mercados
+          .map(
+            (mercado) => `
               <div class="market-item">
                 <span>${mercado.nome}</span>
-                <button class="remove-button" data-id="${mercado.id}">
+                <button onclick="removerMercado('${mercado.id}')" class="remove-market-btn">
                   <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <polyline points="3 6 5 6 21 6"></polyline>
-                    <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                    <line x1="10" y1="11" x2="10" y2="17"></line>
-                    <line x1="14" y1="11" x2="14" y2="17"></line>
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
                   </svg>
                 </button>
               </div>
-            `).join("");
+            `
+          )
+          .join("");
 
       } catch (error) {
         console.error("Erro ao carregar mercados:", error);
+        alert("Erro ao carregar mercados. Por favor, tente novamente.");
       }
     }
 
@@ -1338,21 +1330,21 @@
 
       // Inicializar a página
       setupTabs();
-carregarMercados().then(() => {
-  // Markets loaded successfully
-}).catch(error => {
-  console.error('Error loading markets:', error);
-});
-carregarApostas().then(() => {
-  // Apostas loaded successfully
-}).catch(error => {
-  console.error('Error loading apostas:', error);
-});
-buscarDadosAPI().then(() => {
-  // API data loaded successfully
-}).catch(error => {
-  console.error('Error loading API data:', error);
-});
+      carregarMercados().then(() => {
+        // Markets loaded successfully
+      }).catch(error => {
+        console.error('Error loading markets:', error);
+      });
+      carregarApostas().then(() => {
+        // Apostas loaded successfully
+      }).catch(error => {
+        console.error('Error loading apostas:', error);
+      });
+      buscarDadosAPI().then(() => {
+        // API data loaded successfully
+      }).catch(error => {
+        console.error('Error loading API data:', error);
+      });
 
       // Adicionar evento para atualizar jogadores quando mudar a liga
       document.getElementById("liga").addEventListener("change", () => {
