--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -630,6 +630,28 @@
 
 <body>
   <button class="back-button" onclick="window.location.href='visualization.html'"></button>
+  <!-- Modal de Login -->
+  <div id="login-modal" class="login-modal">
+    <div class="login-form">
+      <h2>Login</h2>
+      <form onsubmit="handleLogin(event)">
+        <div class="form-group">
+          <label for="login-email">Email</label>
+          <input type="email" id="login-email" required>
+        </div>
+        <div class="form-group">
+          <label for="login-password">Senha</label>
+          <input type="password" id="login-password" required>
+        </div>
+        <button type="submit" id="login-button" class="login-button">
+          <span id="login-button-text">ENTRAR</span>
+          <div class="loader" id="login-loader"></div>
+        </button>
+        <div class="error-message" id="login-error"></div>
+      </form>
+    </div>
+  </div>
+
   <div class="container">
     <div class="app-container">
       <!-- Cabeçalho -->
@@ -802,8 +824,119 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
 
   <!-- Script principal -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-app.js";
+  <script>
+    // Configuração do Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyALiAKWq7Z6B9ut6KCHt9L4g8Vt8VHF6iM",
+      authDomain: "rw-tips.firebaseapp.com",
+      projectId: "rw-tips",
+      storageBucket: "rw-tips.appspot.com",
+      messagingSenderId: "806941219354",
+      appId: "1:806941219354:web:6f904532b6884251444fa3",
+      measurementId: "G-64HF8TWQV4"
+    };
+
+    // Inicializar Firebase
+    firebase.initializeApp(firebaseConfig);
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    // Função para exibir mensagens de erro
+    function showError(element, message) {
+      element.textContent = message;
+      element.style.display = 'block';
+      setTimeout(() => {
+        element.style.display = 'none';
+      }, 5000);
+    }
+
+    // Função para exibir mensagens de sucesso
+    function showSuccess(element, message) {
+      element.textContent = message;
+      element.style.display = 'block';
+      setTimeout(() => {
+        element.style.display = 'none';
+      }, 5000);
+    }
+
+    // Função para fazer login
+    function handleLogin(event) {
+      event.preventDefault();
+      const email = document.getElementById('login-email').value;
+      const password = document.getElementById('login-password').value;
+      const loginButton = document.getElementById('login-button');
+      const loginText = document.getElementById('login-button-text');
+      const loginLoader = document.getElementById('login-loader');
+      const loginError = document.getElementById('login-error');
+
+      if (!email || !password) {
+        showError(loginError, 'Por favor, preencha todos os campos');
+        return;
+      }
+
+      // Mostrar loader
+      loginText.style.display = 'none';
+      loginLoader.style.display = 'block';
+      loginButton.disabled = true;
+
+      // Tentar login
+      auth.signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+          const user = userCredential.user;
+
+          // Verificar se o usuário existe no Firestore e se a senha não expirou
+          db.collection('users').doc(user.uid).get()
+            .then((doc) => {
+              if (doc.exists) {
+                const userData = doc.data();
+                const expirationDate = userData.expirationDate?.toDate();
+
+                if (expirationDate && expirationDate > new Date()) {
+                  // Salvar informações do usuário
+                  localStorage.setItem('currentUser', user.email);
+                  localStorage.setItem('currentUserKey', user.uid);
+                  window.location.reload();
+                } else {
+                  auth.signOut().then(() => {
+                    showError(loginError, 'Sua senha expirou. Por favor, entre em contato com o administrador.');
+                    loginText.style.display = 'block';
+                    loginLoader.style.display = 'none';
+                    loginButton.disabled = false;
+                  });
+                }
+              } else {
+                auth.signOut().then(() => {
+                  showError(loginError, 'Usuário não encontrado.');
+                  loginText.style.display = 'block';
+                  loginLoader.style.display = 'none';
+                  loginButton.disabled = false;
+                });
+              }
+            })
+            .catch((error) => {
+              showError(loginError, 'Erro ao verificar usuário: ' + error.message);
+              loginText.style.display = 'block';
+              loginLoader.style.display = 'none';
+              loginButton.disabled = false;
+            });
+        })
+        .catch((error) => {
+          showError(loginError, 'Erro ao fazer login: ' + error.message);
+          loginText.style.display = 'block';
+          loginLoader.style.display = 'none';
+          loginButton.disabled = false;
+        });
+    }
+
+    // Verificar login ao carregar a página
+    window.addEventListener('load', () => {
+      const currentUser = localStorage.getItem('currentUser');
+      const currentUserKey = localStorage.getItem('currentUserKey');
+
+      if (!currentUser || !currentUserKey) {
+        document.getElementById('login-modal').classList.add('show');
+      }
+    });
     import {
       getFirestore,
       collection,
