--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -825,6 +825,10 @@
 
   <!-- Script principal -->
   <script>
+    // Initialize tabs when DOM is loaded
+    document.addEventListener('DOMContentLoaded', () => {
+      setupTabs();
+    });
     // Configuração do Firebase
     const firebaseConfig = {
       apiKey: "AIzaSyALiAKWq7Z6B9ut6KCHt9L4g8Vt8VHF6iM",
@@ -1040,18 +1044,44 @@
     // Funções de navegação
     function setupTabs() {
       const tabButtons = document.querySelectorAll(".tab-button");
-      tabButtons.forEach(button => {
-        button.addEventListener("click", () => {
-          // Remover classe active de todos os botões e conteúdos
-          tabButtons.forEach(btn => btn.classList.remove("active"));
-          document.querySelectorAll(".tab-content").forEach(content =>
-            content.classList.remove("active")
-          );
+      const tabContents = document.querySelectorAll(".tab-content");
 
-          // Adicionar classe active ao botão clicado e seu conteúdo
+      // Remove all existing click event listeners
+      tabButtons.forEach(button => {
+        button.replaceWith(button.cloneNode(true));
+      });
+
+      // Get fresh references after replacing elements
+      const newTabButtons = document.querySelectorAll(".tab-button");
+
+      // Hide all tab contents except the first one
+      tabContents.forEach((content, index) => {
+        if (index === 0) {
+          content.classList.add("active");
+        } else {
+          content.classList.remove("active");
+        }
+      });
+
+      // Set first tab button as active
+      newTabButtons[0]?.classList.add("active");
+
+      newTabButtons.forEach(button => {
+        button.addEventListener("click", () => {
+          // Remove active class from all buttons and contents
+          newTabButtons.forEach(btn => btn.classList.remove("active"));
+          tabContents.forEach(content => content.classList.remove("active"));
+
+          // Add active class to clicked button and its content
           button.classList.add("active");
-          const tabId = button.dataset.tab;
-          document.getElementById(`${tabId}-tab`).classList.add("active");
+          const tabId = button.getAttribute("data-tab");
+          const tabContent = document.getElementById(`${tabId}-tab`);
+
+          if (tabContent) {
+            tabContent.classList.add("active");
+          } else {
+            console.error(`Tab content not found for tab: ${tabId}`);
+          }
         });
       });
     }
@@ -1456,6 +1486,9 @@
     async function buscarDadosAPI() {
       try {
         const response = await fetch('https://api.green365.com.br/api/events/ended?sport_id=4&competition_id=&page=1');
+        if (!response.ok) {
+          throw new Error('Failed to fetch data from API');
+        }
         const data = await response.json();
 
         if (data && data.data) {
@@ -1465,12 +1498,10 @@
             const ligaOriginal = match.leagueName;
             const liga = mapearLiga(ligaOriginal);
 
-            // Inicializar o Set para a liga se não existir
             if (!jogadoresPorLiga[liga]) {
               jogadoresPorLiga[liga] = new Set();
             }
 
-            // Adicionar jogadores apenas se a liga for mapeada corretamente
             if (liga !== "Outro") {
               if (match.home) {
                 const jogador = extrairNomeJogador(match.home);
@@ -1483,14 +1514,35 @@
             }
           });
 
-          // Atualizar cache
+          // Update the liga select element
+          const ligaSelect = document.getElementById('liga');
+          if (ligaSelect) {
+            const currentValue = ligaSelect.value;
+            ligaSelect.innerHTML = '<option value="">Selecione a liga</option>';
+
+            Object.keys(jogadoresPorLiga).sort().forEach(liga => {
+              const option = document.createElement('option');
+              option.value = liga;
+              option.textContent = liga;
+              ligaSelect.appendChild(option);
+            });
+
+            if (currentValue) {
+              ligaSelect.value = currentValue;
+            }
+          }
+
+          // Cache the players data
           jogadoresCache = jogadoresPorLiga;
 
-          // Criar e atualizar datalists
-          atualizarDatalistsJogadores();
+          // Update the datalist if a league is selected
+          const selectedLiga = document.getElementById('liga').value;
+          if (selectedLiga) {
+            atualizarDatalistsJogadores();
+          }
         }
       } catch (error) {
-        console.error("Erro ao buscar dados da API:", error);
+        console.error('Error fetching API data:', error);
       }
     }
 
@@ -1667,7 +1719,7 @@
       <input type="password" id="login-password" required>
     </div>
     <button type="submit" id="login-button" class="login-button">
-      <span id="login-button-text">Entrar</span>
+      <span id="login-button-text">ENTRAR</span>
       <div id="login-loader" class="loader"></div>
     </button>
     <div id="login-error" class="error-message"></div>
