--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gerenciamento</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Firebase SDK -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.2/firebase-app-compat.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.2/firebase-auth-compat.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/9.22.2/firebase-firestore-compat.min.js"></script>
+  
   <style>
     /* Reset e estilos base */
     * {
@@ -19,6 +24,104 @@
       background: linear-gradient(135deg, #121212, #1e1e1e);
       color: #e0e0e0;
       min-height: 100vh;
+    }
+
+    /* Login Modal */
+    .login-modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      z-index: 1000;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .login-modal.show {
+      display: flex;
+    }
+
+    .login-form {
+      background: #1e1e1e;
+      padding: 2rem;
+      border-radius: 8px;
+      width: 100%;
+      max-width: 400px;
+      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    }
+
+    .login-form h2 {
+      margin-bottom: 1.5rem;
+      color: #fff;
+      text-align: center;
+    }
+
+    .form-group {
+      margin-bottom: 1rem;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 0.5rem;
+      color: #e0e0e0;
+    }
+
+    .form-group input {
+      width: 100%;
+      padding: 0.75rem;
+      border: 1px solid #333;
+      border-radius: 4px;
+      background: #2d2d2d;
+      color: #fff;
+      font-size: 1rem;
+    }
+
+    .login-button {
+      width: 100%;
+      padding: 0.75rem;
+      background: #2196f3;
+      color: #fff;
+      border: none;
+      border-radius: 4px;
+      font-size: 1rem;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .login-button:hover {
+      background: #1976d2;
+    }
+
+    .login-button:disabled {
+      background: #666;
+      cursor: not-allowed;
+    }
+
+    .error-message {
+      color: #ff5252;
+      margin-top: 1rem;
+      text-align: center;
+      display: none;
+    }
+
+    .loader {
+      display: none;
+      width: 20px;
+      height: 20px;
+      border: 2px solid #fff;
+      border-radius: 50%;
+      border-top-color: transparent;
+      animation: spin 1s linear infinite;
+      margin: 0 auto;
+    }
+
+    @keyframes spin {
+      to {
+        transform: rotate(360deg);
+      }
     }
 
     /* Container principal */
@@ -1415,4 +1518,26 @@
   </script>
 </body>
 
+</html>
+
+<!-- Login Modal -->
+<div id="login-modal" class="login-modal">
+  <form class="login-form" onsubmit="handleLogin(event)">
+    <h2>Login</h2>
+    <div class="form-group">
+      <label for="login-email">Email</label>
+      <input type="email" id="login-email" required>
+    </div>
+    <div class="form-group">
+      <label for="login-password">Senha</label>
+      <input type="password" id="login-password" required>
+    </div>
+    <button type="submit" id="login-button" class="login-button">
+      <span id="login-button-text">Entrar</span>
+      <div id="login-loader" class="loader"></div>
+    </button>
+    <div id="login-error" class="error-message"></div>
+  </form>
+</div>
+</body>
 </html>
