--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -15,10 +15,10 @@
     }
 
     :root {
-      --color-primary: #6366f1;
-      --color-primary-light: #818cf8;
-      --color-primary-dark: #4f46e5;
-      --color-secondary: #8b5cf6;
+      --color-primary:rgb(0, 0, 0);
+      --color-primary-light:hsl(128, 100.00%, 47.30%);
+      --color-primary-dark: hsl(125, 92%, 47%);
+      --color-secondary: #000000;
       --color-secondary-light: #a78bfa;
       --color-accent: #10b981;
       --color-accent-light: #34d399;
