--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -868,7 +868,7 @@
           <path d="M19 12H5"></path>
           <path d="M12 19l-7-7 7-7"></path>
         </svg>
-        Voltar para Visualization
+        Voltar
       </a>
     </div>
 
