--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -860,7 +860,7 @@
           <path d="M19 12H5"></path>
           <path d="M12 19l-7-7 7-7"></path>
         </svg>
-        Voltar
+        Voltar para Visualization
       </a>
     </div>
     
@@ -1306,13 +1306,15 @@
       }
     }
 
-    // Função para carregar as apostas (ajustada para mostrar todas)
+    // Função para carregar as apostas (ajustada para mostrar apenas do usuário atual)
     function carregarApostas() {
       const apostasLista = document.getElementById("apostas-lista");
       apostasLista.innerHTML = '<div class="loading">Carregando apostas</div>';
 
+      // Modificado para filtrar apenas as apostas do usuário atual
       const apostasRef = query(
         collection(db, "apostas"),
+        where("userEmail", "==", currentUser),
         orderBy("timestamp", "desc")
       );
 
