--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1753,60 +1753,54 @@
         setupTabs();
         await carregarMercados();
 
-        // SOLUÇÃO: Tentar carregar as apostas com atraso maior e com retry
-        let retryCount = 0;
-        const maxRetries = 3;
+        // Configurar listener em tempo real para as apostas
+        const apostasRef = query(
+          collection(db, "apostas"),
+          where("userEmail", "==", currentUser),
+          orderBy("timestamp", "desc")
+        );
 
-        const tryLoadApostas = () => {
-          setTimeout(async () => {
-            try {
-              console.log(`Tentativa ${retryCount + 1} de carregar apostas...`);
-
-              // Carregar apostas diretamente com getDocs em vez de onSnapshot
-              const apostasRef = query(
-                collection(db, "apostas"),
-                where("userEmail", "==", currentUser),
-                orderBy("timestamp", "desc")
-              );
-
-              const snapshot = await getDocs(apostasRef);
-
-              if (snapshot.empty) {
-                console.log("Nenhuma aposta encontrada");
-                document.getElementById("apostas-lista").innerHTML =
-                  '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
-                return;
-              }
-
-              console.log(`Encontradas ${snapshot.size} apostas`);
-
-              // Processar as apostas manualmente
+        // Usar onSnapshot para manter os dados atualizados em tempo real
+        const unsubscribe = onSnapshot(apostasRef, (snapshot) => {
+          try {
+            if (snapshot.empty) {
+              console.log("Nenhuma aposta encontrada");
+              document.getElementById("apostas-lista").innerHTML =
+                '<div style="text-align: center; padding: 15px; color: #888;">Nenhuma aposta registrada</div>';
               todasApostas = [];
-              snapshot.forEach(doc => {
-                todasApostas.push({ id: doc.id, ...doc.data() });
-              });
-
-              // Atualizar a interface com as apostas carregadas
               atualizarInterfaceApostas();
-
-            } catch (error) {
-              console.error("Erro ao carregar apostas:", error);
-              if (retryCount < maxRetries) {
-                retryCount++;
-                console.log(`Tentando novamente em ${1000 * retryCount}ms...`);
-                tryLoadApostas();
-              }
+              return;
             }
-          }, 1000 * (retryCount + 1));  // Tempo progressivo: 1s, 2s, 3s
-        };
 
-        // Iniciar tentativas de carregamento
-        tryLoadApostas();
+            console.log(`Encontradas ${snapshot.size} apostas`);
 
-        await buscarDadosAPI();
-      } catch (error) {
-        console.error("Erro ao carregar a página:", error);
+            // Processar as apostas
+            todasApostas = [];
+            snapshot.forEach(doc => {
+              todasApostas.push({ id: doc.id, ...doc.data() });
+            });
+
+            // Atualizar a interface com as apostas carregadas
+            atualizarInterfaceApostas();
+
+          } catch (error) {
+            console.error("Erro ao carregar apostas:", error);
+            if (retryCount < maxRetries) {
+              retryCount++;
+              console.log(`Tentando novamente em ${1000 * retryCount}ms...`);
+              tryLoadApostas();
+            }
+          }
+        }, 1000 * (retryCount + 1));  // Tempo progressivo: 1s, 2s, 3s
       }
+
+      // Iniciar tentativas de carregamento
+      tryLoadApostas();
+
+      await buscarDadosAPI();
+    } catch (error) {
+      console.error("Erro ao carregar a página:", error);
+    }
     });
 
     // Adicionar evento para atualizar jogadores quando mudar a liga
