--- a/formularioApostas.html
+++ b/formularioApostas.html
@@ -1050,6 +1050,27 @@
       limit,
     } from "https://www.gstatic.com/firebasejs/11.3.1/firebase-firestore.js";
 
+    let retryCount = 0;
+    const maxRetries = 3;
+
+    async function tryLoadApostas() {
+      try {
+        await carregarApostas();
+        retryCount = 0; // Reset retry count on success
+      } catch (error) {
+        console.error("Erro ao carregar apostas:", error);
+        if (retryCount < maxRetries) {
+          retryCount++;
+          console.log(`Tentando novamente em ${1000 * retryCount}ms...`);
+          setTimeout(tryLoadApostas, 1000 * retryCount);
+        } else {
+          console.error("Número máximo de tentativas atingido");
+          document.getElementById("apostas-lista").innerHTML =
+            '<div style="text-align: center; padding: 15px; color: #888;">Erro ao carregar apostas após várias tentativas. Por favor, recarregue a página.</div>';
+        }
+      }
+    }
+
     const firebaseConfig = {
       apiKey: "AIzaSyALiAKWq7Z6B9ut6KCHt9L4g8Vt8VHF6iM",
       authDomain: "rw-tips.firebaseapp.com",
@@ -1258,18 +1279,18 @@
         mercadosLista.innerHTML = mercadosUsuario.length === 0
           ? '<div class="history-empty">Nenhum mercado cadastrado</div>'
           : mercadosUsuario.map(mercado => `
-          <div class="market-item">
-            <span>${mercado.nome}</span>
-            <button class="remove-button" data-id="${mercado.id}">
-              <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <polyline points="3 6 5 6 21 6"></polyline>
-                <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
-                <line x1="10" y1="11" x2="10" y2="17"></line>
-                <line x1="14" y1="11" x2="14" y2="17"></line>
-              </svg>
-            </button>
-          </div>
-        `).join("");
+            <div class="market-item">
+              <span>${mercado.nome}</span>
+              <button class="remove-button" data-id="${mercado.id}">
+                <svg class="icon-sm" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="3 6 5 6 21 6"></polyline>
+                  <path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path>
+                  <line x1="10" y1="11" x2="10" y2="17"></line>
+                  <line x1="14" y1="11" x2="14" y2="17"></line>
+                </svg>
+              </button>
+            </div>
+          `).join("");
 
       } catch (error) {
         console.error("Erro ao carregar mercados:", error);
@@ -1346,16 +1367,16 @@
         }
 
         apostaItem.innerHTML = `
-          <div class="aposta-info">
-            <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
-            ${aposta.jogador1} vs ${aposta.jogador2}<br>
-            <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
-            <small>${dataFormatada}</small>
-          </div>
-          <div class="aposta-actions">
-            <button onclick="removerAposta('${aposta.id}')">Remover</button>
-          </div>
-        `;
+            <div class="aposta-info">
+              <strong>${aposta.liga}</strong> · <span class="${statusClass}">${statusText}${valorFinalText}</span><br>
+              ${aposta.jogador1} vs ${aposta.jogador2}<br>
+              <small>${aposta.mercado} · Stake: ${formatarMoeda(stake)} · Odds: ${odds}</small><br>
+              <small>${dataFormatada}</small>
+            </div>
+            <div class="aposta-actions">
+              <button onclick="removerAposta('${aposta.id}')">Remover</button>
+            </div>
+          `;
 
         apostasLista.appendChild(apostaItem);
       });
@@ -1398,8 +1419,8 @@
       } catch (error) {
         console.error("Erro ao carregar apostas:", error);
         apostasLista.innerHTML = `<div style="text-align: center; padding: 15px; color: #888;">
-          Erro ao carregar apostas: ${error.message}. Tente recarregar a página.
-        </div>`;
+            Erro ao carregar apostas: ${error.message}. Tente recarregar a página.
+          </div>`;
       }
     }
 
@@ -1792,145 +1813,146 @@
             }
           }
         }, 1000 * (retryCount + 1));  // Tempo progressivo: 1s, 2s, 3s
+      } catch (error) {
+        console.error("Erro ao inicializar a página:", error);
       }
-
-      // Iniciar tentativas de carregamento
-      tryLoadApostas();
-
-      await buscarDadosAPI();
-    } catch (error) {
-      console.error("Erro ao carregar a página:", error);
-    }
-    });
-
-    // Adicionar evento para atualizar jogadores quando mudar a liga
-    document.getElementById("liga").addEventListener("change", () => {
-      atualizarDatalistsJogadores();
-    });
-
-    // Form de apostas
-    document.getElementById("bet-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-
-      const formData = {
-        liga: document.getElementById("liga").value,
-        jogador1: document.getElementById("jogador1").value,
-        jogador2: document.getElementById("jogador2").value,
-        mercado: document.getElementById("mercado").value,
-        stake: parseFloat(document.getElementById("stake").value.replace(',', '.')),
-        odds: parseFloat(document.getElementById("odds").value.replace(',', '.')),
-        resultado: document.getElementById("resultado").value,
-        userEmail: currentUser,
-        timestamp: serverTimestamp()
-      };
 
       try {
-        await addDoc(collection(db, "apostas"), formData);
-
-        // Limpar formulário
-        e.target.reset();
-        document.getElementById("resultado-final").textContent = formatarMoeda(0);
-
-        await carregarApostas();
-      } catch (error) {
-        console.error("Erro ao salvar aposta:", error);
-        alert("Erro ao salvar aposta: " + error.message);
+        await tryLoadApostas(); // Certifique-se de que tryLoadApostas está definida
+        await buscarDadosAPI();
+      } catch (error) { // Fixed: moved catch block inside try
+        console.error("Erro ao carregar a página:", error);
       }
-    });
 
-    // Form de mercados
-    document.getElementById("market-form").addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const novoMercado = document.getElementById("novo-mercado").value.trim();
-      if (novoMercado) {
-        await adicionarMercado(novoMercado);
-      }
-    });
 
-    // Remover mercado
-    document.addEventListener("click", async (e) => {
-      if (e.target.closest(".remove-button:not(.remove-bet)")) {
-        const button = e.target.closest(".remove-button");
-        await removerMercado(button.dataset.id);
-      }
-    });
-
-    // Cálculo dinâmico do resultado
-    ["stake", "odds", "resultado"].forEach(id => {
-      document.getElementById(id).addEventListener("input", atualizarValorFinal);
-    });
-
-    // Event listeners para os botões de período
-    document.querySelectorAll('.period-button').forEach(button => {
-      button.addEventListener('click', (e) => {
-        if (!e.target.dataset.days) return;
-        const days = parseInt(e.target.dataset.days);
-        updateChartPeriod(days);
+      // Adicionar evento para atualizar jogadores quando mudar a liga
+      document.getElementById("liga").addEventListener("change", () => {
+        atualizarDatalistsJogadores();
       });
-    });
 
-    // Add event listeners for date inputs
-    document.getElementById('start-date').addEventListener('change', handleDateChange);
-    document.getElementById('end-date').addEventListener('change', handleDateChange);
+      // Form de apostas
+      document.getElementById("bet-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
 
-    document.getElementById('clear-date-range').addEventListener('click', () => {
-      // Clear date inputs
-      document.getElementById('start-date').value = '';
-      document.getElementById('end-date').value = '';
+        const formData = {
+          liga: document.getElementById("liga").value,
+          jogador1: document.getElementById("jogador1").value,
+          jogador2: document.getElementById("jogador2").value,
+          mercado: document.getElementById("mercado").value,
+          stake: parseFloat(document.getElementById("stake").value.replace(',', '.')),
+          odds: parseFloat(document.getElementById("odds").value.replace(',', '.')),
+          resultado: document.getElementById("resultado").value,
+          userEmail: currentUser,
+          timestamp: serverTimestamp()
+        };
 
-      // Set 7 days as active period
-      document.querySelectorAll('.period-button').forEach(btn => {
-        btn.classList.remove('active');
-        if (btn.dataset.days === '7') {
-          btn.classList.add('active');
+        try {
+          await addDoc(collection(db, "apostas"), formData);
+
+          // Limpar formulário
+          e.target.reset();
+          document.getElementById("resultado-final").textContent = formatarMoeda(0);
+
+          await carregarApostas();
+        } catch (error) {
+          console.error("Erro ao salvar aposta:", error);
+          alert("Erro ao salvar aposta: " + error.message);
         }
       });
 
-      // Update chart title and recreate chart for 7 days
-      document.getElementById('chart-period-title').textContent = 'Desempenho (7 dias)';
-      criarGrafico(7);
-    });
-
-    function handleDateChange() {
-      const startDate = document.getElementById('start-date').value;
-      const endDate = document.getElementById('end-date').value;
-
-      if (startDate && endDate) {
-        // Remove active from all period buttons
-        document.querySelectorAll('.period-button').forEach(btn =>
-          btn.classList.remove('active'));
-
-        // Update chart title with custom date range
-        const start = new Date(startDate);
-        const end = new Date(endDate);
-
-        // Validate date range
-        if (end < start) {
-          alert('A data final não pode ser anterior à data inicial');
-          return;
+      // Form de mercados
+      document.getElementById("market-form").addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const novoMercado = document.getElementById("novo-mercado").value.trim();
+        if (novoMercado) {
+          await adicionarMercado(novoMercado);
         }
+      });
 
-        document.getElementById('chart-period-title').textContent =
-          `Desempenho (${start.toLocaleDateString()} - ${end.toLocaleDateString()})`;
+      // Remover mercado
+      document.addEventListener("click", async (e) => {
+        if (e.target.closest(".remove-button:not(.remove-bet)")) {
+          const button = e.target.closest(".remove-button");
+          await removerMercado(button.dataset.id);
+        }
+      });
 
-        criarGrafico(null, startDate, endDate);
-      }
-    }
+      // Cálculo dinâmico do resultado
+      ["stake", "odds", "resultado"].forEach(id => {
+        document.getElementById(id).addEventListener("input", atualizarValorFinal);
+      });
 
-    // Defina os mapeamentos de dias da semana e meses em português
-    Chart.defaults.locale = 'pt-BR';
-    Chart.register({
-      id: 'pt-BR',
-      locale: {
-        date: {
-          months: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
-          shortMonths: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
-          days: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
-          shortDays: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb']
+      // Event listeners para os botões de período
+      document.querySelectorAll('.period-button').forEach(button => {
+        button.addEventListener('click', (e) => {
+          if (!e.target.dataset.days) return;
+          const days = parseInt(e.target.dataset.days);
+          updateChartPeriod(days);
+        });
+      });
+
+      // Add event listeners for date inputs
+      document.getElementById('start-date').addEventListener('change', handleDateChange);
+      document.getElementById('end-date').addEventListener('change', handleDateChange);
+
+      document.getElementById('clear-date-range').addEventListener('click', () => {
+        // Clear date inputs
+        document.getElementById('start-date').value = '';
+        document.getElementById('end-date').value = '';
+
+        // Set 7 days as active period
+        document.querySelectorAll('.period-button').forEach(btn => {
+          btn.classList.remove('active');
+          if (btn.dataset.days === '7') {
+            btn.classList.add('active');
+          }
+        });
+
+        // Update chart title and recreate chart for 7 days
+        document.getElementById('chart-period-title').textContent = 'Desempenho (7 dias)';
+        criarGrafico(7);
+      });
+
+      function handleDateChange() {
+        const startDate = document.getElementById('start-date').value;
+        const endDate = document.getElementById('end-date').value;
+
+        if (startDate && endDate) {
+          // Remove active from all period buttons
+          document.querySelectorAll('.period-button').forEach(btn =>
+            btn.classList.remove('active'));
+
+          // Update chart title with custom date range
+          const start = new Date(startDate);
+          const end = new Date(endDate);
+
+          // Validate date range
+          if (end < start) {
+            alert('A data final não pode ser anterior à data inicial');
+            return;
+          }
+
+          document.getElementById('chart-period-title').textContent =
+            `Desempenho (${start.toLocaleDateString()} - ${end.toLocaleDateString()})`;
+
+          criarGrafico(null, startDate, endDate);
         }
       }
-    });
-  </script>
+
+      // Defina os mapeamentos de dias da semana e meses em português
+      Chart.defaults.locale = 'pt-BR';
+      Chart.register({
+        id: 'pt-BR',
+        locale: {
+          date: {
+            months: ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'],
+            shortMonths: ['Jan', 'Fev', 'Mar', 'Abr', 'Mai', 'Jun', 'Jul', 'Ago', 'Set', 'Out', 'Nov', 'Dez'],
+            days: ['Domingo', 'Segunda', 'Terça', 'Quarta', 'Quinta', 'Sexta', 'Sábado'],
+            shortDays: ['Dom', 'Seg', 'Ter', 'Qua', 'Qui', 'Sex', 'Sáb']
+          }
+        }
+      });
+    </script>
 </body>
 
 </html>
